2006-06-29 [colin]	2.3.1cvs39

	* src/compose.c
		Fix Spelling menu (discrepancy between context menu
		and top menu when folder's dictionary isn't the 
		default one)
	* src/plugins/pgpcore/sgpgme.c
		More error reporting about why gpgme can fail

2006-06-29 [wwp]	2.3.1cvs38

	* src/mainwindow.c
		honor the display-header-pane setting even when the message view
		is a separate window.

2006-06-29 [wwp]	2.3.1cvs37

	* src/prefs_actions.c
		forgot to commit that one (use of GTK_STOCK_INFO).

2006-06-29 [colin]	2.3.1cvs36

	* src/imap.c
		Better handling of login errors (ask the password
		again once), alert in case of error. Fix three
		signedness warnings.

2006-06-28 [wwp]	2.3.1cvs35

	* src/prefs_template.c
	* src/prefs_matcher.c
	* src/prefs_filtering_action.c
	* src/prefs_quote.c
		unify info/help/symbols.. buttons to use GTK_STOCK_INFO,
		patch by Fabien Vantard, slightly modified.

2006-06-28 [paul]

	2.4.0-rc2 released

2006-06-28 [colin]	2.3.1cvs34

	* src/prefs_account.c
		Fix bug #977 (Can't add or edit imap accounts)

2006-06-28 [colin]	2.3.1cvs33

	* src/mimeview.c
		Fix previous

2006-06-28 [colin]	2.3.1cvs32

	* src/mimeview.c
		Save named inlined attachments with "Save all"
	* src/main.c
	* src/mbox.c
	* src/common/plugin.c
	* src/common/plugin.h
	* src/common/sylpheed.c
	* src/common/utils.c
	* src/plugins/pgpcore/sylpheed.def
	* src/plugins/pgpinline/sylpheed.def
	* src/plugins/pgpmime/sylpheed.def
		Win32 compatibility patch, by
		Werner Koch

2006-06-28 [wwp]	2.3.1cvs31

	* src/imap.c
	* src/prefs_folder_item.c
		less compilation warnings (thanks to Fabien Vantard), less typos.

2006-06-28 [paul]	2.3.1cvs30

	* src/gtk/gtkutils.c
		gtk_combo_box_set_focus_on_click() is only
		available since gtk 2.6.0

2006-06-28 [paul]	2.3.1cvs29

	* src/prefs_ext_prog.c
		fix engrish and add a tooltip for the
		'command for 'Display as text' option

2006-06-28 [paul]

	2.4.0-rc1 released

2006-06-28 [paul]	2.3.1cvs28

	* ChangeLog
	* tools/Makefile.am