@@ -1640,3 +1640,4 @@
 ( cvs diff -u -r 1.60.2.33 -r 1.60.2.34 src/prefs_actions.c;  ) > 2.3.1cvs37.patchset
 ( cvs diff -u -r 1.274.2.119 -r 1.274.2.120 src/mainwindow.c;  ) > 2.3.1cvs38.patchset
 ( cvs diff -u -r 1.382.2.288 -r 1.382.2.289 src/compose.c;  cvs diff -u -r 1.1.2.20 -r 1.1.2.21 src/plugins/pgpcore/sgpgme.c;  ) > 2.3.1cvs39.patchset
+( cvs diff -u -r 1.115.2.92 -r 1.115.2.93 src/main.c;  cvs diff -u -r 1.1.2.21 -r 1.1.2.22 src/plugins/pgpcore/sgpgme.c;  ) > 2.3.1cvs40.patchset
